--- a/netology-cluster/inventory.ini
+++ b/netology-cluster/inventory.ini
@@ -2,19 +2,19 @@
 # ## different ip than the default iface
 # ## We should set etcd_member_name for etcd cluster. The node that is not a etcd member do not need to set the value, or can set the empty string value.
 [all]
-control_plane ansible_host=192.168.10.25 ansible_user=ubuntu
-worker1 ansible_host=192.168.11.16 ansible_user=ubuntu
-worker2 ansible_host=192.168.12.25 ansible_user=ubuntu
+master ansible_host="{{ tf_master_ip }}" ansible_user=ubuntu
+worker1 ansible_host="{{ tf_worker1_ip }}" ansible_user=ubuntu
+worker2 ansible_host="{{ tf_worker2_ip }}" ansible_user=ubuntu
 
 # ## configure a bastion host if your nodes are not directly reachable
 # [bastion]
 # bastion ansible_host=x.x.x.x ansible_user=some_user
 
 [kube_control_plane]
-control_plane
+master
 
 [etcd]
-control_plane
+master
 
 [kube_node]
 worker1
