--- a/netology-cluster/inventory.ini
+++ b/netology-cluster/inventory.ini
@@ -5,6 +5,7 @@
 master ansible_host="{{ tf_master_ip }}" ansible_user=ubuntu
 worker1 ansible_host="{{ tf_worker1_ip }}" ansible_user=ubuntu
 worker2 ansible_host="{{ tf_worker2_ip }}" ansible_user=ubuntu
+worker3 ansible_host="{{ tf_worker3_ip }}" ansible_user=ubuntu
 
 # ## configure a bastion host if your nodes are not directly reachable
 # [bastion]
@@ -19,6 +20,7 @@ master
 [kube_node]
 worker1
 worker2
+worker3
 
 [calico_rr]
 
